--- a/circle.yml
+++ b/circle.yml
@@ -1,4 +1,8 @@
 dependencies:
   override:
+    - pip install -r requirements.txt
     - python manage.py collectstatic --no-input
     - python setup.py sdist
+# remove cached dir
+#  post:
+#    - rm -r ~/.gradle
