--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -5,8 +5,8 @@ recursive-include home/templates *
 recursive-include search/templates *
 # dev mode
 recursive-include AsianCops/static*
-recursive-include home/static *
-recursive-include search/static *
+#recursive-include home/static *
+#recursive-include search/static *
 include *.txt
 include *.md
 include *.ini
