more ansible changes - can successfully deploy the app

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,4 @@
-# stuff from collectstatic
-recursive-include AsianCops *
+recursive-include AsianCops
 prune AsianCops/db.sqlite3
 include *.txt
 include *.md
