--- a/configure/roles/web/tasks/env.yml
+++ b/configure/roles/web/tasks/env.yml
@@ -43,9 +43,9 @@
   become: yes
   become_user: root
 
-# venv is 0700 since gunicorn runs as ec2-user
+# venv is 0755 since static and media lives in there
 - name: create venv_dir
-  file: path={{ venv_dir_prefix }} state=directory mode=0700
+  file: path={{ venv_dir_prefix }} state=directory mode=0755
   become: yes
   become_user: "{{ app_user }}"
 
