--- a/configure/roles/web/templates/nginx_asiancops.conf
+++ b/configure/roles/web/templates/nginx_asiancops.conf
@@ -12,7 +12,7 @@ server {
   client_max_body_size 10m;
 
   location /media/ {
-    alias           {{ venv }}/lib/python2.7/site-packages/AsianCops/media/;
+    alias           {{ app_path }}/media/;
     access_log      off;
     log_not_found   off;
     expires         7d;
@@ -21,7 +21,7 @@ server {
   }
 
   location /static/ {
-    alias           {{ venv }}/lib/python2.7/site-packages/AsianCops/static/;
+    alias           {{ app_path }}/static/;
     access_log      off;
     log_not_found   off;
     expires         7d;
@@ -30,7 +30,7 @@ server {
   }
 
   location /favicon.ico {
-    root            {{ venv }}/lib/python2.7/site-packages/AsianCops/;
+    root            {{ app_path }}/;
     access_log      off;
     log_not_found   off;
   }
