--- a/configure/roles/web/templates/supervisor_asiancops.conf
+++ b/configure/roles/web/templates/supervisor_asiancops.conf
@@ -1,10 +1,9 @@
 [group:asiancops]
 programs=gunicorn
 
-{# TODO workerthread should be depended on num_cpu x 2 + 1 #}
 [program:gunicorn]
 environment=DJANGO_SETTINGS_MODULE=AsianCops.settings.production
-command={{ venv }}/bin/gunicorn --bind unix:{{ app_dir_root }}/asiancops.sock AsianCops.wsgi:application -w 3
+command={{ venv }}/bin/gunicorn --bind unix:{{ app_dir_root }}/asiancops.sock AsianCops.wsgi:application -w {{ ansible_processor_vcpus * 2 + 1 }}
 directory={{ venv }}/lib/python2.7/site-packages/AsianCops
 user={{ app_user }}
 autostart=true
