--- a/configure/deploy.yml
+++ b/configure/deploy.yml
@@ -14,7 +14,7 @@
 
 # this play uses the aws dynamic inventory
 - name: deploy to AWS
-  hosts: ec2
+  hosts: tag_group_asiancops_web
   user: "{{ deploy_user }}"
   roles:
   - web
