--- a/circle.yml
+++ b/circle.yml
@@ -1,7 +1,7 @@
 dependencies:
   override:
     - pip install -r requirements.txt
-    - python AsianCops/manage.py collectstatic --no-input
+#    - python AsianCops/manage.py collectstatic --no-input
     - python setup.py sdist
 # remove cached dir
 #  post:
