--- a/configure/roles/web/tasks/artifact.yml
+++ b/configure/roles/web/tasks/artifact.yml
@@ -16,18 +16,14 @@
   become: yes
   become_user: "{{ app_user }}"
 
-# no need to fix file mode for these files since /data/asiancops/venv is 700
-- name: deliver the secret key file
-  shell: |
-    echo "{{ secure_vars.django.prod_secret_key }}" > {{ app_path }}/secret-key.txt
-    chmod 600 {{ app_path }}/secret-key.txt
-  become: yes
-  become_user: "{{ app_user }}"
-
-- name: deliver the db password file
-  shell: |
-    echo "{{ secure_vars.rds.master_db_password }}" > {{ app_path }}/db-password.txt
-    chmod 600 {{ app_path }}/db-password.txt
+- name: deliver the password files
+  copy:
+    content: "{{ item.content }}"
+    dest: "{{ app_path }}/{{ item.file }}"
+    mode: 0600
+  with_items:
+  - { 'content': "{{ secure_vars.rds.master_db_password }}", 'file': 'db-password.txt' }
+  - { 'content': "{{ secure_vars.django.prod_secret_key }}", 'file': 'secret-key.txt' }
   become: yes
   become_user: "{{ app_user }}"
 
@@ -42,17 +38,32 @@
   become: yes
   become_user: "{{ app_user }}"
 
-- name: run django collect static and migrate
+- name: create the static directory
+  file: path={{ app_path }}/static state=directory
+  become: yes
+  become_user: "{{ app_user }}"
+
+- name: run django collectstatic
   django_manage:
-    command: "{{ item }}"
+    command: collectstatic
+    virtualenv: "{{ venv }}"
+    app_path: "{{ venv }}/bin"
+    settings: AsianCops.settings.production
+    pythonpath: "{{ app_path }}"
+  become: yes
+  become_user: "{{ app_user }}"
+
+ - name: run django migrate
+  django_manage:
+    command: migrate
     virtualenv: "{{ venv }}"
 #    manage.py is packaged as a script
     app_path: "{{ venv }}/bin"
     settings: AsianCops.settings.production
     pythonpath: "{{ app_path }}"
 #  environment: "{{ db_env }}"
-  with_items:
-  - collectstatic
-  - migrate
   become: yes
   become_user: "{{ app_user }}"
+  run_once: yes
+
+
