fix the problem of collectstatic, static now lives outside of the venv

--- a/configure/roles/web/templates/nginx_asiancops.conf
+++ b/configure/roles/web/templates/nginx_asiancops.conf
@@ -12,7 +12,7 @@ server {
   client_max_body_size 10m;
 
   location /media/ {
-    alias           {{ app_path }}/media/;
+    alias           {{ media_root }}/;
     access_log      off;
     log_not_found   off;
     expires         7d;
@@ -21,7 +21,7 @@ server {
   }
 
   location /static/ {
-    alias           {{ app_path }}/static/;
+    alias           {{ static_root }}/;
     access_log      off;
     log_not_found   off;
     expires         7d;
