--- a/configure/roles/web/tasks/artifact.yml
+++ b/configure/roles/web/tasks/artifact.yml
@@ -28,7 +28,7 @@
   become_user: "{{ app_user }}"
 
 - name: deliver the db env file
-  template: src=db_env.json dest={{ app_path }}
+  template: src=config.json dest={{ app_path }}
   become: yes
   become_user: "{{ app_user }}"
 
@@ -39,7 +39,7 @@
   become_user: "{{ app_user }}"
 
 - name: create the static directory
-  file: path={{ app_path }}/static state=directory
+  file: path={{ static_root }} state=directory
   become: yes
   become_user: "{{ app_user }}"
 
@@ -53,7 +53,7 @@
   become: yes
   become_user: "{{ app_user }}"
 
- - name: run django migrate
+- name: run django migrate
   django_manage:
     command: migrate
     virtualenv: "{{ venv }}"
