--- a/configure/roles/web/vars/main.yml
+++ b/configure/roles/web/vars/main.yml
@@ -3,6 +3,8 @@ app_user: ec2-user
 app_group: ec2-user
 
 app_dir_root: /data/asiancops
+static_root: "{{ app_dir_root }}/static"
+media_root: "{{ app_dir_root }}/media"
 
 venv_dir_prefix: "{{ app_dir_root }}/venv"
 venv_name: asiancops
