enabled app logging

--- a/configure/roles/web/tasks/env.yml
+++ b/configure/roles/web/tasks/env.yml
@@ -43,8 +43,12 @@
   become: yes
   become_user: root
 
-- name: create venv_dir
-  file: path={{ venv_dir_prefix }} state=directory mode=0700
+- name: create directories
+  file: path={{ item.name }} state=directory mode={{ item.mode }}
+  with_items:
+  - { 'name': "{{ log_dir }}", mode: '0700' }
+  - { 'name': "{{ static_root }}", mode: '0700' }
+  - { 'name': "{{ venv_dir_prefix }}", mode: '0700' }
   become: yes
   become_user: "{{ app_user }}"
 
